# bildverarbeitung

./: .gitignore
CGBVRahmenprogramm/: CMakeLists.txt
CGBVRahmenprogramm/A1_Bildverarbeitung/: CMakeLists.txt  FragmentShaderBewMit.glsl  FragmentShaderBrightness_Contrast.glsl  FragmentShaderDilatation.glsl  FragmentShaderErosion.glsl  FragmentShaderGauss3x3.glsl  FragmentShaderGauss5x5.glsl  FragmentShaderGauss7x7.glsl  FragmentShaderLaplace.glsl  FragmentShaderPassthrough.glsl  FragmentShaderSharpen.glsl  FragmentShaderSobel.glsl  ImageProcessing.cpp  Timer.cpp  Timer.h  VertexShader.glsl
CGBVRahmenprogramm/A1_Versuch1a/: CMakeLists.txt  Versuch1a.cpp
CGBVRahmenprogramm/A1_Versuch1b/: CMakeLists.txt  Versuch1b.cpp  Versuch1b.cpp.b  Versuch1b.cpp.c
CGBVRahmenprogramm/A3_Normalenvektoren/: Aufgabe3.cpp  CMakeLists.txt  FragmentShader.glsl  VertexShader.glsl
CGBVRahmenprogramm/Abgabe/A1_Bildverarbeitung/: FragmentShaderBewMit.glsl  FragmentShaderBrightness_Contrast.glsl  FragmentShaderDilatation.glsl  FragmentShaderErosion.glsl  FragmentShaderGauss3x3.glsl  FragmentShaderGauss5x5.glsl  FragmentShaderGauss7x7.glsl  FragmentShaderLaplace.glsl  FragmentShaderPassthrough.glsl  FragmentShaderSharpen.glsl  FragmentShaderSobel.glsl  ImageProcessing.cpp  VertexShader.glsl
CGBVRahmenprogramm/Abgabe/A1_Versuch1a/: Versuch1a.cpp
CGBVRahmenprogramm/Dependencies/: CMakeLists.txt
CGBVRahmenprogramm/ImageLoader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
CGBVRahmenprogramm/Templates/: CMakeLists.txt
CGBVRahmenprogramm/cmake/: CreateLaunchers.cmake  Dependencies.cmake  FindGLEW.cmake  Findfreeglut.cmake  Install.cmake
(+34 files in other folders)
